transicion de color menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>
           ¡La app ideal para los viajeros que quieren disfrutar Argentina!
         </p>
-        <a href="#" class="btn_descargar" id="boton_descargar_app">Descargar</a>
+        <a href="#descargar_App" class="btn_descargar" id="boton_descargar_app">Descargar</a>
       </main>
       <article>
         <p id="descripcion">
