--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img class="fondo_principal" src="./img/fondo.jpg" alt="fondo glaciar">
       <img src="./img/fondo_medium.jpg"  class="image_medium">
       <img src="./img/fondo_small.jpg"  class="image_small">
-      <main class="principal_container">
+      <main class="portada">
         <h1>Gui<b>AR</b></h1>
         <br />
         <p>
